--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,9 @@
 language: python
 python:
   - "3.5"
+install:
+  - pip install coveralls
 # command to run tests
-script: make test
+script: coverage run --source=c4cs-f16-rpn,make test
+after_success:
+  coveralls
