--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,12 @@ language: python
 python:
   - "3.5"
 install:
-  - pip install coveralls
+  - pip install python-coveralls
+  - pip install coverage       # Add me to install coverage.py
+  - pip install nose           # Add me to install nose
 # command to run tests
-script: coverage run --source=c4cs-f16-rpn,make test
+script: 
+  - make test
+  - nosetests --with-coverage
 after_success:
-  coveralls
+  - coveralls
